Task 6: Annotation-Based Servlet Configuration

--- a/CarpoolingSystem/src/main/webapp/WEB-INF/web.xml
+++ b/CarpoolingSystem/src/main/webapp/WEB-INF/web.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" version="6.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="https://jakarta.ee/xml/ns/jakartaee"
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+         version="6.0">
 
-<servlet>
+    <servlet>
         <servlet-name>CarpoolServlet</servlet-name>
         <servlet-class>com.mani.carpoolsystem.CarpoolServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
         <servlet-name>CarpoolServlet</servlet-name>
-        <url-pattern>/Carpool</url-pattern>
+        <url-pattern>/carpool</url-pattern> <!-- URL pattern is now in lowercase -->
     </servlet-mapping>
 
 </web-app>
